# sweet_logs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  regression.md
.github/workflows/: check.yml  publish.yml
docs/: conf.py  installation.rst
src/sweet_logs/: __init__.py  config.py  formatters.py  setup.py
tests/: test_formatters.py  test_sweet_logs.py
